--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -24,6 +24,9 @@ brad15 99乘法表
 brad16 註冊表 JSP串接資料庫 (ft. Register.serverlet)(ft. memberDB.serverlet)(ft. brad17.jsp)
 brad17 16號測試用
 brad18 JSP專用的標籤
-
+brad21 使用forward作頁面轉換至brad22
+brad22
 
 brad23 bean (ft. member.java)
+brad24
+brad25
