--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -30,3 +30,13 @@ brad22
 brad23 bean (ft. member.java)
 brad24
 brad25
+brad26  EL語法
+brad27  El語法
+brad28  EL語法四個訪問對象 pageContext request session application
+brad29
+brad30
+brad31 
+brad32 JSTL  湯姆貓jstl下載  ***載入程序!!!!
+brad33 運用JSTL的標籤做除錯，沒有設參數也可以運行(不顯示錯誤區)
+brad34 JSTL的if、choose、when、otherwise標籤
+brad35 JSTL迴圈 forEach status
