--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -40,3 +40,14 @@ brad32 JSTL  湯姆貓jstl下載  ***載入程序!!!!
 brad33 運用JSTL的標籤做除錯，沒有設參數也可以運行(不顯示錯誤區)
 brad34 JSTL的if、choose、when、otherwise標籤
 brad35 JSTL迴圈 forEach status
+
+brad36 <taglib core> <%%>語法連結SQL並創建帳號 <c:choose> <c:when> <c:otherwise>
+brad37 <taglib sql> <%%>語法連結SQL並新增、刪除、修改 <sql:setDataSource> 
+brad38 模糊查詢
+brad39 用<c set> 做出上一頁下一頁、分頁功能
+
+brad41 抓農委會open data轉換json資料至資料庫，解析json資料的方法，設在API的(BradUtils)
+brad42.43.44  session串在一起
+
+ Login (串接SQL會員資訊) Check -> CRUD(登入會員取得權限可以對資料庫增刪修查) ->Logout
+ (login、checkAccount、main、logout、addMamber)
