--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -51,3 +51,22 @@ brad42.43.44  session串在一起
 
  Login (串接SQL會員資訊) Check -> CRUD(登入會員取得權限可以對資料庫增刪修查) ->Logout
  (login、checkAccount、main、logout、addMamber)
+ 
+ brad46.html  AJAX異步通信 Lesson01
+ brad47.jsp  brad46.html的測試，回傳個樂透
+ brad48.html AJAX + JQuery，簡化brad46.html的框架  GET、POST不同傳輸方法
+ brad49 brad48串流用測試，GET通訊格式
+ brad50 brad48串流用測試，POST通訊格式
+ brad51.html 使用者可以輸入搜尋ID，查詢北風資料庫中對應的ID資訊，收到JSON並生成頁面資訊
+ brad52.jsp brad51的資料庫搜尋功能、串聯BradUtils中的SortedMap轉JSON功能
+
+ brad53 JSTL <%function> 很無聊
+ brad54 JSTL <%fmt> 多國語系切換、各國時間
+ brad55 自訂標籤 tagdir
+ 
+ 
+ 
+ 
+ 
+ 
+ 
