--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -62,11 +62,10 @@ brad42.43.44  session串在一起
 
  brad53 JSTL <%function> 很無聊
  brad54 JSTL <%fmt> 多國語系切換、各國時間
- brad55 自訂標籤 tagdir
+ brad55 廢棄
+ brad56	自訂標籤 tagdir
  
- 
- 
- 
- 
+ MyServer.java WebSocket (@ServerEndpoint) ft.myjs.js myClient.html  留言板
+ MyCenter.java ft. client1.html  client2.html  共用繪圖板
  
  
