--- a/MateoWeb/src/main/webapp/index.html
+++ b/MateoWeb/src/main/webapp/index.html
@@ -15,8 +15,8 @@ Brad16 model
 Brad17 圖片加上浮水印後輸出到網頁上
 Brad19 載入MYSQL connector.jar，連結資料庫 並加上商品搜索功能 ft. sform.html
 Brad20 會員登錄系統 從SQL確認帳號密碼 ft.login.html 
-Brad21 JSP java server page
-
+Brad21 @multupartconfig
+Brad22 文件上傳使用@multupartconfig，僅處理PART，其他用forward交給inserMember.jsp處理
 
 
 brad14 jsp 網頁出錯處理，導覽到這裡來不要讓使用者看到錯誤頁面
@@ -64,6 +64,11 @@ brad42.43.44  session串在一起
  brad54 JSTL <%fmt> 多國語系切換、各國時間
  brad55 廢棄
  brad56	自訂標籤 tagdir
+ 
+ brad57.58 coockies <remember me>
+ brad59.60 cookie 前端版remember me
+ brad61.html Brad62.java brad63.jsp MyFilter.java
+ 
  
  MyServer.java WebSocket (@ServerEndpoint) ft.myjs.js myClient.html  留言板
  MyCenter.java ft. client1.html  client2.html  共用繪圖板
